Update : Udacity : ipynb AWS tweaks
Summary : AWS code fixing, trial with ml.p2.xlarge instance
Result : still no successful training run

--- a/Udacity/SageMaker incl NN Sentiment Analysis/Project/SageMaker Project.ipynb
+++ b/Udacity/SageMaker incl NN Sentiment Analysis/Project/SageMaker Project.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +61,16 @@
      "output_type": "stream",
      "text": [
       "mkdir: cannot create directory ‘../data’: File exists\n",
-      "--2019-09-23 17:30:00--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "--2019-09-24 22:48:31--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
       "Resolving ai.stanford.edu (ai.stanford.edu)... 171.64.68.10\n",
       "Connecting to ai.stanford.edu (ai.stanford.edu)|171.64.68.10|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 84125825 (80M) [application/x-gzip]\n",
       "Saving to: ‘../data/aclImdb_v1.tar.gz’\n",
       "\n",
-      "../data/aclImdb_v1. 100%[===================>]  80.23M  23.9MB/s    in 4.8s    \n",
+      "../data/aclImdb_v1. 100%[===================>]  80.23M  24.2MB/s    in 4.4s    \n",
       "\n",
-      "2019-09-23 17:30:05 (16.8 MB/s) - ‘../data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
+      "2019-09-24 22:48:36 (18.2 MB/s) - ‘../data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
       "\n"
      ]
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,15 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I usually come on this website prior to going to the movies, as I like to see what other people think of the movie. I read many reviews which said 'thriller not a horror movie'. This prompted me to give this film a try. I really must take issue with these 'thriller/horror' statements, as it was neither! I almost went and asked for my money back, and if you lot of reviewers enjoyed this rubbish....well you must be easily pleased! At the end of the movie, the people behind me said out loud \"what a waste of time\" and I turned to them and replied \" I couldn't have summed it up better\". I kept waiting for something to happen...but it didn't. There was the potential for a lot of good scares (or thrills if you like) but none happened. Williams acted the part quite well but I felt he was short changed by a poor script which dithered around and went nowhere. Save your money folks, this is a turkey which will be featuring at a DVD store 'bargain box' near you in the very foreseeable future!\n",
-      "0\n"
+      "How to Lose Friends & Alienate People is in all honesty one of the best comedies I've seen this year along with Pineapple Express and Step Brothers. Its not one of those \"gross out\" comedies that heavily relies on fart jokes and toilet humor but instead moves at an affable pace and you will be easily attached to the unfolding narrative. Simon Pegg nails it in the coffin with his hilarious portrayal of a fish-out-of-water character and is quickly detaching himself from the tripod he once belonged to back in England (the other two would be Nick Frost and Edgar Wright). Getting yourself in the top of the Hollywood food chain is a hard thing to do as we can clearly see with Pegg, his first jab at the lead role was David Schwimmer's comedy Run Fatboy Run but it received lukewarm reviews from critics and audiences alike. His second try is this movie, got fairly positive reviews from the majority but was a flop in the box office. I, for one still haven't lost faith in him and I'll still be there whenever he wants to take that third shot for glory.<br /><br />Other characters were well cast from Jeff Bridges to Danny Huston and Gillian Anderson. Surprisingly, Kirsten Dunst in my opinion fared well in this movie as the love angle to Pegg's character however, the spark that I saw in Interview with the Vampire is still lost. She needs to find it, fast or she might suffer the consequences of being lost in the land of \"rom-coms\" forever.\n",
+      "1\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,108 +264,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['usual',\n",
-       " 'come',\n",
-       " 'websit',\n",
-       " 'prior',\n",
-       " 'go',\n",
-       " 'movi',\n",
-       " 'like',\n",
-       " 'see',\n",
+       "['lose',\n",
+       " 'friend',\n",
+       " 'alien',\n",
        " 'peopl',\n",
-       " 'think',\n",
-       " 'movi',\n",
-       " 'read',\n",
-       " 'mani',\n",
-       " 'review',\n",
-       " 'said',\n",
-       " 'thriller',\n",
-       " 'horror',\n",
-       " 'movi',\n",
-       " 'prompt',\n",
-       " 'give',\n",
-       " 'film',\n",
-       " 'tri',\n",
-       " 'realli',\n",
-       " 'must',\n",
-       " 'take',\n",
-       " 'issu',\n",
-       " 'thriller',\n",
-       " 'horror',\n",
-       " 'statement',\n",
-       " 'neither',\n",
-       " 'almost',\n",
-       " 'went',\n",
-       " 'ask',\n",
-       " 'money',\n",
-       " 'back',\n",
-       " 'lot',\n",
-       " 'review',\n",
-       " 'enjoy',\n",
-       " 'rubbish',\n",
-       " 'well',\n",
-       " 'must',\n",
+       " 'honesti',\n",
+       " 'one',\n",
+       " 'best',\n",
+       " 'comedi',\n",
+       " 'seen',\n",
+       " 'year',\n",
+       " 'along',\n",
+       " 'pineappl',\n",
+       " 'express',\n",
+       " 'step',\n",
+       " 'brother',\n",
+       " 'one',\n",
+       " 'gross',\n",
+       " 'comedi',\n",
+       " 'heavili',\n",
+       " 'reli',\n",
+       " 'fart',\n",
+       " 'joke',\n",
+       " 'toilet',\n",
+       " 'humor',\n",
+       " 'instead',\n",
+       " 'move',\n",
+       " 'affabl',\n",
+       " 'pace',\n",
        " 'easili',\n",
-       " 'pleas',\n",
-       " 'end',\n",
+       " 'attach',\n",
+       " 'unfold',\n",
+       " 'narr',\n",
+       " 'simon',\n",
+       " 'pegg',\n",
+       " 'nail',\n",
+       " 'coffin',\n",
+       " 'hilari',\n",
+       " 'portray',\n",
+       " 'fish',\n",
+       " 'water',\n",
+       " 'charact',\n",
+       " 'quickli',\n",
+       " 'detach',\n",
+       " 'tripod',\n",
+       " 'belong',\n",
+       " 'back',\n",
+       " 'england',\n",
+       " 'two',\n",
+       " 'would',\n",
+       " 'nick',\n",
+       " 'frost',\n",
+       " 'edgar',\n",
+       " 'wright',\n",
+       " 'get',\n",
+       " 'top',\n",
+       " 'hollywood',\n",
+       " 'food',\n",
+       " 'chain',\n",
+       " 'hard',\n",
+       " 'thing',\n",
+       " 'clearli',\n",
+       " 'see',\n",
+       " 'pegg',\n",
+       " 'first',\n",
+       " 'jab',\n",
+       " 'lead',\n",
+       " 'role',\n",
+       " 'david',\n",
+       " 'schwimmer',\n",
+       " 'comedi',\n",
+       " 'run',\n",
+       " 'fatboy',\n",
+       " 'run',\n",
+       " 'receiv',\n",
+       " 'lukewarm',\n",
+       " 'review',\n",
+       " 'critic',\n",
+       " 'audienc',\n",
+       " 'alik',\n",
+       " 'second',\n",
+       " 'tri',\n",
        " 'movi',\n",
-       " 'peopl',\n",
-       " 'behind',\n",
-       " 'said',\n",
-       " 'loud',\n",
-       " 'wast',\n",
-       " 'time',\n",
-       " 'turn',\n",
-       " 'repli',\n",
-       " 'sum',\n",
-       " 'better',\n",
-       " 'kept',\n",
-       " 'wait',\n",
-       " 'someth',\n",
-       " 'happen',\n",
-       " 'potenti',\n",
-       " 'lot',\n",
-       " 'good',\n",
-       " 'scare',\n",
-       " 'thrill',\n",
-       " 'like',\n",
-       " 'none',\n",
-       " 'happen',\n",
-       " 'william',\n",
-       " 'act',\n",
-       " 'part',\n",
-       " 'quit',\n",
-       " 'well',\n",
-       " 'felt',\n",
-       " 'short',\n",
-       " 'chang',\n",
-       " 'poor',\n",
-       " 'script',\n",
-       " 'dither',\n",
-       " 'around',\n",
-       " 'went',\n",
-       " 'nowher',\n",
-       " 'save',\n",
-       " 'money',\n",
-       " 'folk',\n",
-       " 'turkey',\n",
-       " 'featur',\n",
-       " 'dvd',\n",
-       " 'store',\n",
-       " 'bargain',\n",
+       " 'got',\n",
+       " 'fairli',\n",
+       " 'posit',\n",
+       " 'review',\n",
+       " 'major',\n",
+       " 'flop',\n",
        " 'box',\n",
-       " 'near',\n",
-       " 'forese',\n",
-       " 'futur']"
+       " 'offic',\n",
+       " 'one',\n",
+       " 'still',\n",
+       " 'lost',\n",
+       " 'faith',\n",
+       " 'still',\n",
+       " 'whenev',\n",
+       " 'want',\n",
+       " 'take',\n",
+       " 'third',\n",
+       " 'shot',\n",
+       " 'glori',\n",
+       " 'charact',\n",
+       " 'well',\n",
+       " 'cast',\n",
+       " 'jeff',\n",
+       " 'bridg',\n",
+       " 'danni',\n",
+       " 'huston',\n",
+       " 'gillian',\n",
+       " 'anderson',\n",
+       " 'surprisingli',\n",
+       " 'kirsten',\n",
+       " 'dunst',\n",
+       " 'opinion',\n",
+       " 'fare',\n",
+       " 'well',\n",
+       " 'movi',\n",
+       " 'love',\n",
+       " 'angl',\n",
+       " 'pegg',\n",
+       " 'charact',\n",
+       " 'howev',\n",
+       " 'spark',\n",
+       " 'saw',\n",
+       " 'interview',\n",
+       " 'vampir',\n",
+       " 'still',\n",
+       " 'lost',\n",
+       " 'need',\n",
+       " 'find',\n",
+       " 'fast',\n",
+       " 'might',\n",
+       " 'suffer',\n",
+       " 'consequ',\n",
+       " 'lost',\n",
+       " 'land',\n",
+       " 'rom',\n",
+       " 'com',\n",
+       " 'forev']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,18 +1000,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, BCELoss: 0.6961064457893371\n",
-      "Epoch: 2, BCELoss: 0.6843361616134643\n",
-      "Epoch: 3, BCELoss: 0.6741210103034974\n",
-      "Epoch: 4, BCELoss: 0.6632079720497132\n",
-      "Epoch: 5, BCELoss: 0.6500760197639466\n"
+      "Epoch: 1, BCELoss: 0.6951723575592041\n",
+      "Epoch: 2, BCELoss: 0.6835551857948303\n",
+      "Epoch: 3, BCELoss: 0.6735055565834045\n",
+      "Epoch: 4, BCELoss: 0.6627874135971069\n",
+      "Epoch: 5, BCELoss: 0.6500958323478698\n"
      ]
     }
    ],
@@ -1003,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1079,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mResourceLimitExceeded\u001b[0m                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-0e8223086435>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'training'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minput_data\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-0e8223086435>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'training'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minput_data\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, inputs, wait, logs, job_name)\u001b[0m\n\u001b[1;32m    327\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prepare_for_training\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 329\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_TrainingJob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_new\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    330\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mstart_new\u001b[0;34m(cls, estimator, inputs)\u001b[0m\n\u001b[1;32m    847\u001b[0m         \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_add_spot_checkpoint_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_mode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    848\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 849\u001b[0;31m         \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mtrain_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    850\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    851\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_current_job_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, input_mode, input_config, role, job_name, output_config, resource_config, vpc_config, hyperparameters, stop_condition, tags, metric_definitions, enable_network_isolation, image, algorithm_arn, encrypt_inter_container_traffic, train_use_spot_instances, checkpoint_s3_uri, checkpoint_local_path)\u001b[0m\n\u001b[1;32m    390\u001b[0m         \u001b[0mLOGGER\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Creating training-job with name: %s\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m         \u001b[0mLOGGER\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"train request: %s\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_request\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_training_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mtrain_request\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m     def compile_model(\n",
@@ -1320,7 +1366,7 @@
     "                     entry_point='predict.py',\n",
     "                     source_dir='serve',\n",
     "                     predictor_cls=StringPredictor)\n",
-    "predictor = model.deploy(initial_instance_count=1, instance_type='ml.p2.xlarge')"
+    "predictor = model.deploy(initial_instance_count=1, instance_type='p2.xlarge')"
    ]
   },
   {
