--- a/DataQuest/Guided Project Bike Rentals/BikeRentals.ipynb
+++ b/DataQuest/Guided Project Bike Rentals/BikeRentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -49,10 +49,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc6aa378ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc6a9ab9cf8>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -60,7 +60,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYcAAAEACAYAAABYq7oeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3W1sW+X5P/BvIDCNVT9Dh7CrOKtLajsPbR7axlQCifQp\nSTvVUTWo0iHiQifUPagETWoa3kzVpNoZ0jYQLdIEVRI2xeNVEv1Z0zRdjQpba0pqqSrduggHyFmd\nMJqmgQJJyPV/kfQcWrvELT45d5rvR7KS++45uq9z4eTC92WfZImIgIiI6BvusDoAIiJSD4sDEREl\nYXEgIqIkLA5ERJSExYGIiJKwOBARUZIZi8P58+dRVlaGFStWoKysDDabDS+99BKGh4dRWVkJr9eL\nqqoqjIyM6OcEg0G43W4UFBSgu7tbn+/t7UVxcTE8Hg/q6+vNuSIiIvrOsm7mcw6Tk5NwOp04efIk\nXn75Zfzwhz/E7t270dTUhOHhYYRCIbz//vt44okn8O6772JgYADr16/Hf/7zH2RlZeGhhx7Cyy+/\njPLycmzatAnPPvssqqqqzLw+IiK6BTe1rdTT04O8vDzk5uaio6MDgUAAABAIBNDe3g4A6OzsRG1t\nLbKzs+FyueB2uxGNRpFIJDA6Oory8nIAQF1dnX4OERGp5aaKw1//+lf89Kc/BQAMDg7CbrcDABwO\nB4aGhgAAmqYhNzdXPycnJweapkHTNDidTn3e6XRC07TvfAFERJR5aReH8fFxdHZ24vHHHwcAZGVl\nXfPv14+JiGjuyk73wEOHDmHlypW4//77AQB2u11/9ZBIJPDAAw8AmHql8PHHH+vnDQwMICcn54bz\nqbDQEBHdmkzdLi/tVw5tbW3Ytm2bPvb7/WhubgYAtLS0oKamRp8Ph8MYGxtDPB5HX18ffD4fHA4H\nbDYbotEoRAStra36OamJZQ+brRwnT56EiFj++M1vfmN5DKo8mAvmgrn49kcmpfXK4cqVK+jp6cGf\n/vQnfa6hoQFbt27FwYMHsXjxYrzxxhsAgMLCQmzduhWFhYW46667cODAAf2VwP79+7F9+3Z8+eWX\n2LRpE6qrqzN6Mbej/v5+q0NQBnNhYC4MzIU50ioO99xzDz755JNr5hYuXIienp6Uxzc2NqKxsTFp\nfuXKlThz5swthElERLOJn5BW3Pbt260OQRnMhYG5MDAX5ripD8HNlqltKOvCstl86O5+GT6fz7IY\niIhuVlZWVsZ6D3zloLhIJGJ1CMpgLgzMhYG5MAeLAxERJeG2UgrcViKiuYjbSkREZCoWB8VxP9XA\nXBiYCwNzYQ4WByIiSsKeQwrsORDRXMSeAxERmYrFQXHcTzUwFwbmwsBcmIPFgYiIkrDnkAJ7DkQ0\nF7HnQEREpmJxUBz3Uw3MhYG5MDAX5mBxICKiJOw5pMCeAxHNRew5EBGRqVgcFMf9VANzYWAuDMyF\nOVgciIgoCXsOKbDnQERzEXsORERkKhYHxXE/1cBcGJgLA3NhjrSKw8jICB5//HEUFBSgqKgIJ0+e\nxPDwMCorK+H1elFVVYWRkRH9+GAwCLfbjYKCAnR3d+vzvb29KC4uhsfjQX19feavhoiIMkPSEAgE\n5ODBgyIiMj4+LpcuXZLdu3dLU1OTiIiEQiFpaGgQEZGzZ89KaWmpjI+PSzwel7y8PJmcnBQREZ/P\nJ9FoVERENm7cKF1dXSnXAyCAWPaw2crl5MmT6aSGiEgZaf5KT8uMrxwuX76M48eP46mnngIAZGdn\nw2azoaOjA4FAAAAQCATQ3t4OAOjs7ERtbS2ys7PhcrngdrsRjUaRSCQwOjqK8vJyAEBdXZ1+DhER\nqWXG4hCPx3H//ffjqaeewooVK/DMM8/gypUrGBwchN1uBwA4HA4MDQ0BADRNQ25urn5+Tk4ONE2D\npmlwOp36vNPphKZpmb6e2w73Uw3MhYG5MDAX5sie6YCJiQn09vZi//79WLVqFZ577jmEQqHpt5sa\nrh9/d9sBuKa/vxdAKYCK6XFk+qs544mJy3jvvff0t7JeffJVVFRwbOH4KlXisXIci8WUisfKcSwW\nUyqe2RxHIhE0NzcDAFwuFzJqpn2nRCIhS5Ys0cfHjx+XH//4x5Kfny+JREJERC5cuCD5+fkiIhIM\nBiUUCunHV1VVyYkTJ645RkSkra1Ndu7cmXJNsOdARHTT0viVnrYZt5Xsdjtyc3Nx/vx5AMDRo0dR\nVFQEv9+vV6yWlhbU1NQAAPx+P8LhMMbGxhCPx9HX1wefzweHwwGbzYZoNAoRQWtrq34OEREpJp0K\nEovFZNWqVVJSUiJbtmyRS5cuyaeffirr1q0Tj8cjGzZskOHhYf34ffv2SV5enuTn58vhw4f1+VOn\nTsmyZctk6dKlsmvXrhuuB75y0B07dszqEJTBXBiYCwNzYUjzV3paZuw5AEBJSQnefffdpPmenp6U\nxzc2NqKxsTFpfuXKlThz5sxNFS8iIpp9vLdSCry3EhHNRby3EhERmYrFQXHXv41zPmMuDMyFgbkw\nB4sDERElYc8hBfYciGguYs+BiIhMxeKgOO6nGpgLA3NhYC7MweJARERJ2HNIgT0HIpqL2HMgIiJT\nsTgojvupBubCwFwYmAtzsDgQEVES9hxSYM+BiOYi9hyIiMhULA6K436qgbkwMBcG5sIcLA5ERJSE\nPYcU2HMgormIPQciIjIVi4PiuJ9qYC4MzIWBuTAHiwMRESVhzyEF9hyIaC5iz4GIiEzF4qA47qca\nmAsDc2FgLsyRVnFwuVwoKSlBWVmZvtUyPDyMyspKeL1eVFVVYWRkRD8+GAzC7XajoKAA3d3d+nxv\nby+Ki4vh8XhQX1+f4UshIqKMkTQsWbJELl68eM3c7t27pampSUREQqGQNDQ0iIjI2bNnpbS0VMbH\nxyUej0teXp5MTk6KiIjP55NoNCoiIhs3bpSurq6U6wEQQCx72GzlcvLkyXRSQ0SkjDR/paclrVcO\nIoLJyclr5jo6OhAIBAAAgUAA7e3tAIDOzk7U1tYiOzsbLpcLbrcb0WgUiUQCo6OjKC8vBwDU1dXp\n5xARkVrSKg5ZWVnYsGEDysvL8eqrrwIABgcHYbfbAQAOhwNDQ0MAAE3TkJubq5+bk5MDTdOgaRqc\nTqc+73Q6oWlaxi7kdsX9VANzYWAuDMyFObLTOeidd97BokWL8Mknn+h9hqm3mxquH3932wG4pr+/\nF0ApgIrpcWT6qznjiYnLeO+99/T+ytUnX0VFBccWjq9SJR4rx7FYTKl4rBzHYjGl4pnNcSQSQXNz\nM4Cp3nAm3fTnHPbu3YsFCxbg1VdfRSQSgd1uRyKRwJo1a3Du3DmEQiFkZWWhoaEBAFBdXY29e/di\n8eLF+jEAEA6H8dZbb+GVV15JDoqfcyAiummz+jmHK1eu4LPPPgMAfP755+ju7sby5cvh9/v1itXS\n0oKamhoAgN/vRzgcxtjYGOLxOPr6+uDz+eBwOGCz2RCNRiEiaG1t1c8hIiK1zFgcBgcH8cgjj6Cs\nrAyrV6/G5s2bUVlZiYaGBhw5cgRerxdHjx7Fnj17AACFhYXYunUrCgsLsWnTJhw4cEDfctq/fz92\n7NgBj8cDt9uN6upqc6/uNnD9lsp8xlwYmAsDc2GOGXsOS5Ys0ff0vmnhwoXo6elJeU5jYyMaGxuT\n5leuXIkzZ87cQphERDSbeG+lFNhzIKK5iPdWIiIiU7E4KI77qQbmwsBcGJgLc7A4EBFREvYcUmDP\ngYjmIvYciIjIVCwOiuN+qoG5MDAXBubCHCwORESUhD2HFNhzIKK5iD0HIiIyFYuD4rifamAuDMyF\ngbkwB4sDERElYc8hBfYciGguYs+BiIhMxeKgOO6nGpgLA3NhYC7MweJARERJ2HNIgT0HIpqL2HMg\nIiJTsTgojvupBubCwFwYmAtzsDgQEVES9hxSYM+BiOYi9hyIiMhULA6K436qgbkwMBcG5sIcaReH\nyclJrFixAn6/HwAwPDyMyspKeL1eVFVVYWRkRD82GAzC7XajoKAA3d3d+nxvby+Ki4vh8XhQX1+f\nwcsgIqJMSrs4vPjiiygsLNTHoVAI69evx7///W+sXbsWwWAQAPD+++/jjTfewLlz53Do0CH84he/\n0PfAfv7zn+O1117D+fPncf78eRw+fDjDl3P7qaiosDoEZTAXBubCwFyYI63iMDAwgL/97W/42c9+\nps91dHQgEAgAAAKBANrb2wEAnZ2dqK2tRXZ2NlwuF9xuN6LRKBKJBEZHR1FeXg4AqKur088hIiK1\npFUcnnvuObzwwgvT7yKaMjg4CLvdDgBwOBwYGhoCAGiahtzcXP24nJwcaJoGTdPgdDr1eafTCU3T\nMnIRtzPupxqYCwNzYWAuzJE90wFvvvkm7HY7SktLv/U/wjcLR2ZsB+Ca/v5eAKUAKqbHV+MwZzwx\ncRnvvfee/lbWq9d99eUrx9aMr1IlHivHsVhMqXisHMdiMaXimc1xJBJBc3MzAMDlciGTZvycw/PP\nP48///nPyM7OxhdffIHR0VFs2bIFp06dQiQSgd1uRyKRwJo1a3Du3DmEQiFkZWWhoaEBAFBdXY29\ne/di8eLF+jEAEA6H8dZbb+GVV15JDoqfcyAiummz+jmHffv24aOPPsIHH3yAcDiMtWvX4vXXX8fm\nzZv1itXS0oKamhoAgN/vRzgcxtjYGOLxOPr6+uDz+eBwOGCz2RCNRiEiaG1t1c8hIiK13PLnHPbs\n2YMjR47A6/Xi6NGj2LNnDwCgsLAQW7duRWFhITZt2oQDBw7oW0779+/Hjh074PF44Ha7UV1dnZmr\nuI1dv6UynzEXBubCwFyYY8aewzc9+uijePTRRwEACxcuRE9PT8rjGhsb0djYmDS/cuVKnDlz5hbC\nJCKi2cR7K6XAngMRzUW8txIREZmKxUFx3E81MBcG5sLAXJiDxYGIiJKw55ACew5ENBdlsufA4pCC\nzebDnXdquHjxv5bFYLcvRiLRb9n6RDT3sCE9C6YKg1j2GBz8EAD3U7+JuTAwFwbmwhwsDkRElITb\nSinYbD6MjLxraQxA5l4eEtH8wG0lIiIyFYuD4rifamAuDMyFgbkwB4sDERElYc8hBfYciGguYs+B\niIhMxeKgOO6nGpgLA3NhYC7MweJARERJ2HNIgT0HIpqL2HMgIiJTsTgojvupBubCwFwYmAtzsDgQ\nEVES9hxSYM+BiOYi9hyIiMhULA6K436qgbkwMBcG5sIcMxaHr776Cg899BDKyspQVFSE559/HgAw\nPDyMyspKeL1eVFVVYWRkRD8nGAzC7XajoKAA3d3d+nxvby+Ki4vh8XhQX19vwuUQEVFGSBo+//xz\nERGZmJiQhx56SN5++23ZvXu3NDU1iYhIKBSShoYGERE5e/aslJaWyvj4uMTjccnLy5PJyUkREfH5\nfBKNRkVEZOPGjdLV1ZVyPQACiGUPm63c8hjS/E9DRKTL5O+NtLaV7rnnHgBTryImJydx3333oaOj\nA4FAAAAQCATQ3t4OAOjs7ERtbS2ys7PhcrngdrsRjUaRSCQwOjqK8vJyAEBdXZ1+DhERqSWt4jA5\nOYmysjI4HA5UVFSgsLAQg4ODsNvtAACHw4GhoSEAgKZpyM3N1c/NycmBpmnQNA1Op1Ofdzqd0DQt\nk9dyW+J+qoG5MDAXBubCHNnpHHTHHXfg9OnTuHz5MqqqqhCJRKbfbmq4fvzdbQfgmv7+XgClACqm\nx5Hpr+aMJyYuXxeLuevdeDw9mn7yV1RUzOvxVarEY+U4FospFY+V41gsplQ8szmORCJobm4GALhc\nLmTSTX/O4be//S2+//3v47XXXkMkEoHdbkcikcCaNWtw7tw5hEIhZGVloaGhAQBQXV2NvXv3YvHi\nxfoxABAOh/HWW2/hlVdeSQ6Kn3MAP+dARDdrVj/n8L///U9/J9IXX3yBI0eOoKysDH6/X69YLS0t\nqKmpAQD4/X6Ew2GMjY0hHo+jr68PPp8PDocDNpsN0WgUIoLW1lb9HCIiUsuMxeHChQtYs2YNysrK\nsHr1avj9fqxbtw4NDQ04cuQIvF4vjh49ij179gAACgsLsXXrVhQWFmLTpk04cOCAvuW0f/9+7Nix\nAx6PB263G9XV1eZe3W3g+i2V+Yy5MDAXBubCHDP2HJYvX47e3t6k+YULF6KnpyflOY2NjWhsbEya\nX7lyJc6cOXMLYRIR0WzivZVSYM+BiOYi3luJiIhMxeKgOO6nGpgLA3NhYC7MweJARERJ2HNIgT0H\nIpqL2HMgIiJTsTgo63vIysqy9OFwuKxOwjW4t2xgLgzMhTlYHJT1Faa2tY5Nf539x+Dgh+ZfJhEp\niT2HFFTpOVi7/lQMCj49iOgG2HMgIiJTsTgoL2J1AMrg3rKBuTAwF+ZgcSAioiTsOaTAnoMRg4JP\nDyK6AfYciIjIVCwOyotYHYAyuLdsYC4MzIU5WByIiCgJew4psOdgxKDg04OIboA9ByIiMhWLg/Ii\nVgegDO4tG5gLA3NhDhYHIiJKwp5DCuw5GDEo+PQgohtgz4GIiEzF4qC8iNUBKIN7ywbmwsBcmGPG\n4jAwMIC1a9eiqKgIy5cvx0svvQQAGB4eRmVlJbxeL6qqqjAyMqKfEwwG4Xa7UVBQgO7ubn2+t7cX\nxcXF8Hg8qK+vN+FyiIgoI2QGFy5ckNOnT4uIyOjoqHg8Hjl37pzs3r1bmpqaREQkFApJQ0ODiIic\nPXtWSktLZXx8XOLxuOTl5cnk5KSIiPh8PolGoyIisnHjRunq6kq5JgABxLKHzVZueQzWrz8VAxHN\nHZn8mZ3xlYPD4UBpaSkAYMGCBSgoKMDAwAA6OjoQCAQAAIFAAO3t7QCAzs5O1NbWIjs7Gy6XC263\nG9FoFIlEAqOjoygvLwcA1NXV6ecQEZFabqrn0N/fj1gshtWrV2NwcBB2ux3AVAEZGhoCAGiahtzc\nXP2cnJwcaJoGTdPgdDr1eafTCU3TMnENt7mI1QEog3vLBubCwFyYIzvdAz/77DM89thjePHFF7Fg\nwYLpt5sarh9/d9sBuKa/vxdAKYCK6XFk+qs544mJy9fFYu56Nx6rsf7VH76KigpLx6rFY+U4Fosp\nFY+V41gsplQ8szmORCJobm4GALhcLmRUOntP4+PjUlVVJX/84x/1ufz8fEkkEiIy1ZfIz88XEZFg\nMCihUEg/rqqqSk6cOHHNMSIibW1tsnPnzpTrgT0HBdZnz4Forsnkz2xa20pPP/00CgsL8eyzz+pz\nfr9fr1gtLS2oqanR58PhMMbGxhCPx9HX1wefzweHwwGbzYZoNAoRQWtrq34OEREpZqbq8fbbb8sd\nd9whJSUlUlpaKmVlZXLo0CH59NNPZd26deLxeGTDhg0yPDysn7Nv3z7Jy8uT/Px8OXz4sD5/6tQp\nWbZsmSxdulR27dp1wzXBVw7fWP8YXzlMO3bsmNUhKIO5MDAXhkz+zM7Yc3j44Yfx9ddfp/y3np6e\nlPONjY1obGxMml+5ciXOnDmTfuUiIiJL8N5KKfDeSkYMCj49iOgGeG8lIiIyFYuD8iJWB6AMvp/d\nwFwYmAtzsDgQEVES9hxSYM/BiEHBpwcR3QB7DkREZCoWB+VFLFz7e8jKyrL04XC49Gi4t2xgLgzM\nhTnSvrcSzUdfweqtrcHBTN+zi4jSwZ5DCuw5qBWDgk9RIiWx50BERKZicVBexOoAlMG9ZQNzYWAu\nzMHiQERESdhzSIE9B7ViUPApSqQk9hyIiMhULA7Ki1gdgDK4t2xgLgzMhTlYHIiIKAl7Dimw56BW\nDAo+RYmUxJ4DERGZisVBeRGrA1AG95YNzIWBuTAHiwMRESVhzyEF9hzUikHBpyiRkthzICIiU7E4\nKC9idQDK4N6ygbkwMBfmmLE47NixA3a7HcXFxfrc8PAwKisr4fV6UVVVhZGREf3fgsEg3G43CgoK\n0N3drc/39vaiuLgYHo8H9fX1Gb4MIiLKKJnB8ePH5fTp07J8+XJ9bvfu3dLU1CQiIqFQSBoaGkRE\n5OzZs1JaWirj4+MSj8clLy9PJicnRUTE5/NJNBoVEZGNGzdKV1fXDdcEIIBY9rDZyi2Pwfr11YmB\niNKTyZ+XGV85PPLII7jvvvuumevo6EAgEAAABAIBtLe3AwA6OztRW1uL7OxsuFwuuN1uRKNRJBIJ\njI6Oory8HABQV1enn0NEROq5pZ7D0NAQ7HY7AMDhcGBoaAgAoGkacnNz9eNycnKgaRo0TYPT6dTn\nnU4nNE37LnHPIxGrA1AG95YNzIWBuTBHRv6G9NRbTzNtOwDX9Pf3AigFUDE9jkx/NWc8MXH5uljM\nXe/G4/m+fgWA75n0/EqP3b4Y4XDzVDQVFQCMX0ZWjmOxmFLxWDmOxWJKxTOb40gkgubmZgCAy+VC\nRqWz99Tf339NzyE/P18SiYSIiFy4cEHy8/NFRCQYDEooFNKPq6qqkhMnTlxzjIhIW1ub7Ny584br\nweK9bvYcGMM31yeaKzL5fE1rW0lEMLXuFL/fr1erlpYW1NTU6PPhcBhjY2OIx+Po6+uDz+eDw+GA\nzWZDNBqFiKC1tVU/h4iIFDRT9di2bZssWrRI7r77bsnNzZWDBw/KxYsXZd26deLxeGTDhg0yPDys\nH79v3z7Jy8uT/Px8OXz4sD5/6tQpWbZsmSxdulR27dr1rWvC4v9bVOuVwzEFYlAhD1blArf6P16m\nOnbsmNUhKIO5MGTy+crbZ6Sg1u0zIjD24q2KwUrfjCGC2c+FmrfviEQi+h70fMdcGDJ5+wwWhxTU\nKg5WYgyqFgeiVHhvJSIiMhWLg/IiVgegkIjVASiD7+03MBfmYHEgIqIk7DmkwJ4DY/jm+gr+iBCl\nxJ4DERGZisVBeRGrA1BIxII1p27fYeXD4XAlRcV9dgNzYY6M3FuJ6Pb1FazeWhsctO7eUjR/seeQ\nAnsOjEGd9adiUPDHlBTEngMREZmKxUF5EasDUEjE6gCUwX12A3NhDhYHIiJKwp5DCuw5MAZ11p+K\nQcEfU1IQew5ERGQqFgflRawOQCERqwNQBvfZDcyFOfg5ByLlWft3tIGpv6WdSPRbGgPNLvYcUmDP\ngTGos746MSj4q4Kuw54DERGZisVBeRGrA1BIxOoAFBKxOgBlsOdgDhYHIiJKwp5DCuw5MAZ11lcn\nBgV/VdB1Mtlz4LuViCgN1r5jiu+Wmn2zvq3U1dWF/Px8eDweNDU1zfbyc1DE6gAUErE6AIVEZnm9\nq7cut+YxOJhQ8u9q3M5mtThMTk7iV7/6FQ4fPoyzZ8+ira0N//rXv2YzhDkoZnUACmEuDPMtF99W\nnP7wLf+WyQL1ofmXqZBZLQ7RaBRutxuLFy/GXXfdhdraWnR0dMxmCHPQJasDUAhzYWAuDMyFGWa1\nOGiahtzcXH3sdDqhadpshkBERGlQtiH9f/+32bK1v/jivGVrJ+u3OgCF9FsdgEL6rQ5AIf2ztM78\nuo3JrBaHnJwcfPTRR/p4YGAAOTk5KY+9fPn/zVZY38Lqv917df0WBWKw0jdjsCIXquXgqtnOhdV5\n+Lb1rfwZmT2Dgx/OWoGa1c85fP311/B6vTh69CgWLVoEn8+HtrY2FBQUzFYIRESUhll95XDnnXfi\n5ZdfRmVlJSYnJ7Fjxw4WBiIiBSn5CWkiIrKWUvdWmm8fkBsYGMDatWtRVFSE5cuX46WXXgIADA8P\no7KyEl6vF1VVVRgZGdHPCQaDcLvdKCgoQHd3t1Whm2JychIrVqyA3+8HMH/zAAAjIyN4/PHHUVBQ\ngKKiIpw8eXLe5iMYDKKoqAjFxcV44oknMDY2Nm9ysWPHDtjtdhQXF+tzt3Ltvb29KC4uhsfjQX19\nfXqLiyK+/vprycvLk/7+fhkbG5OSkhI5d+6c1WGZ6sKFC3L69GkRERkdHRWPxyPnzp2T3bt3S1NT\nk4iIhEIhaWhoEBGRs2fPSmlpqYyPj0s8Hpe8vDyZnJy0LP5M+/3vfy9PPPGEbN68WURk3uZBRCQQ\nCMjBgwdFRGR8fFwuXbo0L/PR398vS5Yska+++kpERLZu3SrNzc3zJhfHjx+X06dPy/Lly/W5W7l2\nn88n0WhUREQ2btwoXV1dM66tTHH45z//KdXV1fo4GAxKKBSyMKLZV1NTI0eOHBGv1yuJREJEpgqI\n1+sVkeScVFdXy4kTJyyJNdM+/vhjWb9+vRw7dkwvDvMxDyIiIyMj8uCDDybNz8d8XLx4Ubxer1y8\neFHGx8dl8+bN8+5npL+//5ricLPXfuHCBSkoKNDn29raZOfOnTOuq8y20nz/gFx/fz9isRhWr16N\nwcFB2O12AIDD4cDQ0BCA5Bzl5OTcNjl67rnn8MILL1zzNr35mAcAiMfjuP/++/HUU09hxYoVeOaZ\nZ3DlypV5mY/77rsPv/71r/GjH/0IOTk5sNlsWL9+/bzMxVVDQ0M3de2apsHpdOrz6f5uVaY4zGef\nffYZHnvsMbz44otYsGBB0vuYrf7gjdnefPNN2O12lJaWfuvthm/3PFw1MTGB3t5e/PKXv0Rvby9+\n8IMfIBQKzbvnBQB88MEH+MMf/oAPP/wQ//3vf/H555/jL3/5y7zMxY2Yde3KFIeb+YDc7WRiYgKP\nPfYYnnzySdTU1AAA7HY7BgcHAQCJRAIPPPAAgKkcffzxx/q5t0uO3nnnHXR2duLBBx/Etm3b8Pe/\n/x1PPvkkHA7HvMrDVU6nE7m5uVi1ahUA4Cc/+Ql6e3vn3fMCAE6dOoWHH34YCxcuxJ133oktW7bg\nH//4x7zMxVU3e+23mhNlikN5eTn6+vrw4YcfYmxsDOFwWH/Xyu3s6aefRmFhIZ599ll9zu/3o7m5\nGQDQ0tKiFw2/349wOIyxsTHE43H09fXB5/NZEXZG7du3Dx999BE++OADhMNhrF27Fq+//jo2b948\nr/Jwld1uR25uLs6fn7qNy9GjR1FUVDTvnhcA4PV6ceLECXz55ZcQERw9ehSFhYXzKhcy1RvWxzd7\n7Q6HAzabDdFoFCKC1tZW/ZyZFlbGoUOHxOPxyNKlSyUYDFodjunefvttueOOO6SkpERKS0ulrKxM\nDh06JJ+TbC+KAAAAvklEQVR++qmsW7dOPB6PbNiwQYaHh/Vz9u3bJ3l5eZKfny+HDx+2MHpzRCIR\nvSE9n/MQi8Vk1apVUlJSIlu2bJFLly7N23z87ne/k8LCQlm+fLnU1dXJ2NjYvMnFtm3bZNGiRXL3\n3XdLbm6uHDx4UC5evHjT137q1ClZtmyZLF26VHbt2pXW2vwQHBERJVFmW4mIiNTB4kBERElYHIiI\nKAmLAxERJWFxICKiJCwORESUhMWBiIiSsDgQEVGS/w8fQWxCYYNKCwAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fc6aa371cf8>"
+       "<matplotlib.figure.Figure at 0x7fc6a9ab8ef0>"
       ]
      },
      "metadata": {},
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
        "Name: cnt, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -331,13 +331,108 @@
        "4           1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bike_rentals.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(bike_rentals, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "predictors = ['casual', 'weekday', 'registered', 'time_label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "regressor = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X_train = train[predictors]\n",
+    "X_test = test[predictors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_train = train['cnt']\n",
+    "y_test = test['cnt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '2012-03-24'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-f3cd7f5440d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/dataquest/system/env/python3/lib/python3.4/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    510\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    511\u001b[0m         X, y = check_X_y(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[1;32m--> 512\u001b[1;33m                          y_numeric=True, multi_output=True)\n\u001b[0m\u001b[0;32m    513\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    514\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/dataquest/system/env/python3/lib/python3.4/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    519\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[0;32m    520\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 521\u001b[1;33m                     ensure_min_features, warn_on_dtype, estimator)\n\u001b[0m\u001b[0;32m    522\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    523\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[1;32m/dataquest/system/env/python3/lib/python3.4/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    400\u001b[0m         \u001b[1;31m# make sure we actually converted to numeric:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    401\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdtype_numeric\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"O\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 402\u001b[1;33m             \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    403\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_nd\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    404\u001b[0m             raise ValueError(\"Found array with dim %d. %s expected <= 2.\"\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '2012-03-24'"
+     ]
+    }
+   ],
+   "source": [
+    "regressor.fit(X_train, y_train)"
    ]
   },
   {
