Update : DataQuest : column changes and update
Summary : Updated column changes from "manual inputs" to True / False, created supplement columns

--- a/DataQuest/Guided Project Employee Exits Survey/EmployeeExits.ipynb
+++ b/DataQuest/Guided Project Employee Exits Survey/EmployeeExits.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +291,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +318,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -337,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fee7806c128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f16db4650b8>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -348,7 +348,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWcAAAEGCAYAAAC5EFRyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE/xJREFUeJzt3X9MVfUfx/HXNRjOaV7KUsMfZCkiCPeCmKirSwraL0v7\nZbXkYtbW5tbPtWpt5qqZ2S+ttlZNpWnW1h9qqyhTLptUIiValmnZtYFh1khTNMV7vn+YKF+Uey/c\ne88Pno9/5AOXc9/HyasPr3vuyWUYhiEAgKX0MHsAAEB7hDMAWBDhDAAWRDgDgAURzgBgQYQzAFhQ\nwsL5scceU2Zmpjwej26++WYdPHjwrI+rqKjQyJEjNWLECC1cuLD1801NTSopKVFGRoamTJmiAwcO\ntH5t27ZtGj9+vLKzs5Wbm6tjx451OMucOXPk8XiUm5urGTNmnHMWADBLXMK5qqpKZWVlbT5XUlKi\n7du3q66uTsOHD9eCBQvafV8oFNLcuXP12Wefafv27Vq1apV27NghSXr++ec1efJk/fTTT7r66qtb\nv//EiRO6++679dZbb+n7779XIBBQcnJyh/O9+uqrqqur09atW3XppZfqtddei9GZA0BsxG3n7HK5\n2qwnT56sHj1OPt24ceNUX1/f7ntqamo0fPhwDR06VMnJyZo5c6bWrFkjSVqzZo1KS0slSaWlpVq9\nerUk6fPPP1dubq6ys7MlSampqa3PvW7dOo0fP15jxozR7bffrubmZklS7969JUmGYejIkSO68MIL\nY336ANAlcQvnjt54uHTpUl1zzTXtPt/Q0KDBgwe3rgcNGqSGhgZJ0r59+9S/f39J0oABA/THH39I\nknbu3ClJmjp1qsaMGaNFixZJkv766y89++yzWr9+vWpra5Wfn6+XXnqp9dizZ8/WwIEDtW3bNt17\n771dPFsAiK2kWB5s3LhxOnbsmP755x81NTUpLy9PkrRw4UIVFxdLkp577jklJyfrzjvv7NJzndod\nt7S0qLq6WrW1terZs6cmTZqkMWPGqLm5WT/88IMmTJggwzB0/PhxFRYWtn7/0qVLZRiG5s6dq2ef\nfVbz5s3r0jwAEEsxDeevv/5a0snOuby8XEuXLm3z9eXLl+uTTz7Rhg0bzvr9aWlp+u2331rX9fX1\nSktLk3Ryt3xq99zY2KiLL75Y0snd9ZVXXqnU1FRJ0rXXXqtvv/1WGRkZKikp0cqVK885r8vl0syZ\nM/XCCy90/qQBIA4iqjUWLFigrKws5eTk6K677gp7NcTZVFRUaNGiRVq7dq1SUlLO+piCggL9/PPP\n2rNnj44dO6b3339f06ZNkyRNmzZNy5cvlySVl5frxhtvlCRNmTJF3333nY4ePaqWlhZVVVVp1KhR\nGjdunKqrq/XLL79Ikpqbm7Vr1y5Jav2cYRhau3atPB5P1OcDAHFlhBEMBo1LL73U+Pfffw3DMIzb\nbrvNKC8v7/B7AoGAUVZW1uZzl19+uTFkyBDD6/UaXq/XuP/++w3DMIy9e/ca1113XevjPv30U2PE\niBHG5ZdfbixYsKD183/99ZcxadIkY8SIEUZxcbHR1NTU+rWVK1caWVlZxujRo43HH3+89fOVlZVG\nQUGBkZOTY+Tm5hofffSREQqFjAkTJhg5OTlGTk6OUVZWZjQ3N4f7awCAhHIZRse3DG1qalJhYaG+\n+uor9enTR9OnT9cDDzygyZMnJ+q/HwDQ7YStNVJTU/XII49oyJAhSktLk9vtJpgBIM7ChvPu3bv1\nyiuvaM+ePdq7d68OHTqk9957LxGzAUC3FfZqjdraWk2YMEEXXHCBJGnGjBn68ssv210K9/9vOgEA\nhHeuZjlsOGdkZOiZZ57R0aNHlZKSovXr16ugoCCqJwHM5HI9LcN42uwxgHY62tSGrTVyc3M1a9Ys\n5efnKzc3V4Zh6L777ovpgEB8Bc0eAIha2Ks1Ij6Qy8XOGZbkcvllGMvNHgNop6Pc5H7OcLzSUr/Z\nIwBRY+cMACZh54xuLRAImD0CEDXCGQAsiFoDAExCrQEANkM4w/H8/oDZIwBRo9aA47lcARmGz+wx\ngHY6yk3CGY7nckn804QV0TkDgM0QzugGAmYPAESNcAYACyKc4Xjz5vnMHgGIGi8IAoBJeEEQ3Rr3\n1oAdEc4AYEHUGgBgEmoNALAZwhmOx701YEdhw3nnzp3yer3Ky8uT1+tV3759tWTJkkTMBsREebnZ\nEwDRi6pzDoVCGjRokDZt2qTBgwe3PRCdMyyKe2vAqmLWOX/xxRe67LLL2gUzACC2ogrnDz74QHfc\ncUe8ZgHiJGD2AEDUIq41jh8/rksuuUQ//PCDLrroovYHotaARXE/Z1hVR7mZFOlBPv30U+Xn5581\nmE/x+/1KT0+XJLndbnk8Hvl8Pkmn36XFmnWbdVHRybVO8v3357nWReoclyv676mMYJ4268pK8/8+\nWVt6ferjYDCocCLeOd9xxx2aOnWqSktLz34gds7ohES8WOeU54DzdPn/hNLc3KyhQ4dq9+7d6tOn\nT9RPApxLYoIz/rUG4YzO6HKt0atXL+3fvz+mQwGJco5f9gBL494aMJVTdpxOOQ8kFvfWAACbIZzh\neGe+Ug7YBeEMABZE5wxTOaWrdcp5ILHonNGtPf202RMA0WPnDFNxnTO6M3bOAGAz7JxhKqe8tZqd\nMzqDnTMA2AzhjG4gYPYAQNQIZzge99aAHdE5w1RO6Wqdch5ILDpnALAZwhmOx701YEeEMwBYEJ0z\nTOWUrtYp54HEonNGt8a9NWBH7JxhKu6tge6syzvnAwcO6NZbb1VmZqaysrK0adOmmA4IAGgrop2z\n3+/XVVddpbKyMrW0tKi5uVnnn39+2wOxc0YnOOW+F+yc0Rkd5WbYcD548KC8Xq9++eWXTj8JcC5O\nCU7CGZ3RpVrj119/Vb9+/VRWVqa8vDzdd999OnLkSMyHBOInYPYAQNSSwj2gpaVF3377rd544w2N\nGTNGDz74oJ5//nnNnz+/3WP9fr/S09MlSW63Wx6PRz6fT9LpNwKwZn3mWvLJ5ZJOB6jvvz9ju3a5\n4nt8KaBAwPy/T9bWXp/6OBgMKpywtca+fftUWFio3bt3S5I2btyohQsX6qOPPmp7IGoNdIJT6gCn\nnAcSq0u1Rv/+/TV48GDt3LlTkrR+/XqNGjUqthMCANqI6GqNrVu3as6cOTp+/LiGDRumZcuWqW/f\nvm0PxM4ZnZCIHWcgEGj99TJe2DmjMzrKzbCdsyTl5uZq8+bNMR0KAHBuvEMQpnLKjtMp54HE4t4a\nAGAzhDMc78zLmAC7IJwBwILonGEqp3S1TjkPJBadMwDYDOEMx6Nzhh0RzgBgQXTOMJVTulqnnAcS\ni84ZAGyGcIbj0TnDjghnALAgOmeYyildrVPOA4lF5wwANkM4w/HonGFHhDMAWBCdM0zllK7WKeeB\nxKJzBgCbIZzheHTOsKOI/h+C6enp6tu3r3r06KHk5GTV1NTEey4A6NYi6pyHDRumb775Rqmpqec+\nEJ0zOsEpXa1TzgOJ1eXO2TAMhUKhmA4FADi3iMLZ5XKpuLhYBQUFevvtt+M9ExBTdM6wo4g65+rq\nag0cOFD79+9XcXGxMjMzNXHixHaP8/v9Sk9PlyS53W55PB75fD5Jp39AWLM+c22oSHJJJ1eS778/\n7baulBQIVJr+98na2utTHweDQYUT9XXO8+fPV58+ffTwww+3PRCdMyyKPhhW1aXOubm5WYcOHZIk\nHT58WJ9//rmys7NjOyEAoI2wtca+ffs0ffp0uVwutbS06K677lJJSUkiZgNiJKDTBQRgD7x9G47n\ncgVkGD6zxwDa6Sg3CWc4Hp0zrIp7a6BbmzfP7AmA6BHOcDyfL2D2CEDUCGcAsCA6ZwAwCZ0zANgM\n4QzHO/Ots4BdEM5wvOXLzZ4AiB6dMxyP65xhVXTOAGAzhDO6gYDZAwBRI5wBwILonOF4dM6wKjpn\ndGvcWwN2RDjD8bi3BuyIcAYAC6JzBgCT0DkDgM0QznA87q0BO4o4nEOhkPLy8jRt2rR4zgPEHPfW\ngB1FHM6LFy/WqFGj4jkLEBfl5T6zRwCiFlE419fX65NPPtGcOXPiPQ8AQBGG80MPPaRFixbJ5XLF\nex4gDgJmDwBELSncAz7++GP1799fHo9HgUCgw8vl/H6/0tPTJUlut1sej0c+n0/S6RdlWLPuyrqo\nqEid0Zl9RWVlpenny9pZ61MfB4NBhRP2Oucnn3xSK1asUFJSko4cOaJ//vlHM2bM0Lvvvtv2QFzn\nDIvy+XxtfjgAq+goN6N6E0pVVZVeeuklrV27NqonAcxEOMOqeBMKurXs7GyzRwCixtu34XiBQKC1\n+wOsJGa1RmefBADQHrUGANgM4QzH48VA2BHhDAAWROcMACahcwYAmyGc4Xh0zrAjwhkALIjOGQBM\nQucMADZDOMPx6JxhR4QzAFgQnTMAmITOGQBshnCG49E5w44IZwCwIDpnADAJnTMA2AzhDMejc4Yd\nhQ3nf//9V1dccYW8Xq+ysrL05JNPJmIuAOjWwoZzSkqKKisrtWXLFm3btk0bNmxQdXV1ImYDYqKu\nrs7sEYCoRVRr9OrVS9LJXXQoFFJqampchwJiafXq1WaPAEQtonAOhULyer0aMGCAfD6fRo0aFe+5\ngJj5+++/zR4BiFpSJA/q0aOHtmzZooMHD6qkpERVVVW66qqr2j3O7/crPT1dkuR2u+XxeOTz+SSd\nflGGNetErOfOnauNGzfK7XZr69at8ng8kk7+G33wwQdNn49191yf+jgYDCqcqK9zfuaZZ9SrVy89\n8sgjbQ/Edc6wKJ/P1+aHA7CKLl3n/Oeff+rAgQOSpCNHjmjdunWtuxAAQHyErTV+//13lZaWyjAM\nhUIh3X333Zo0aVIiZgNiIjs72+wRgKjx9m04XiAQaO3+ACvpKDcJZwAwCffWAACbIZzheFypATsi\nnAHAguicAcAkdM4AYDOEMxyPzhl2RDgDgAXROQOASeicAcBmCGc4Hp0z7IhwBgALonMGAJPQOQOA\nzRDOcDw6Z9gR4QwAFkTnDAAmoXMGAJshnOF4dM6wo7DhXF9fr6uvvlpZWVkaPXq0lixZkoi5AKBb\nC9s5NzY2qrGxUR6PR4cOHVJ+fr7WrFmjkSNHtj0QnTMARKVLnfOAAQPk8XgkSb1791ZmZqYaGhpi\nOyEAoI2oOudgMKi6ujpdccUV8ZoHiDk6Z9hRUqQPPHTokG655RYtXrxYvXv3Putj/H6/0tPTJUlu\nt1sej0c+n0/S6R8Q1qxZs+6u61MfB4NBhRPRdc4tLS26/vrrdc011+iBBx44+4HonAEgKh3lZkTh\nPGvWLPXr108vv/xyp54EANBel14QrK6u1sqVK7VhwwZ5vV7l5eWpoqIi5kMC8XLmr5SAXYTtnCdM\nmKATJ04kYhYAwH+4twYAmIR7awCAzRDOcDw6Z9gR4QwAFkTnDAAmoXMGAJshnOF4dM6wI8IZACyI\nzhkATELnDAA2QzjD8eicYUeEMwBYEJ0zAJiEzhkAbIZwhuPROcOOCGcAsCA6ZwAwCZ0zANgM4QzH\no3OGHYUN53vuuUf9+/dXTk5OIuYBACiCznnjxo3q3bu3Zs2apW3btp37QHTOABCVLnXOEydOVGpq\nasyHAgCcG50zHI/OGXaUFMuD+f1+paenS5Lcbrc8Ho98Pp+k0z8grFmzZt1d16c+DgaDCiei65z3\n7NmjG264gc4ZAGKoy9c5G4ZB8AJAAoUN5zvvvFPjx4/Xzp07NWTIEC1btiwRcwExc+avlIBdhO2c\n33vvvUTMAQA4A/fWAACTcG8NALAZwhmOR+cMOyKcAcCC6JwBwCR0zgBgM4QzHI/OGXZEOAOABdE5\nA4BJ6JwBwGYIZzgenTPsiHAGAAuicwYAk9A5A4DNEM5wPDpn2BHhDAAWROcMACahcwYAm4konCsq\nKjRy5EiNGDFCCxcujPdMQEzROcOOwoZzKBTS3Llz9dlnn2n79u1atWqVduzYkYjZgJioq6szewQg\namHDuaamRsOHD9fQoUOVnJysmTNnas2aNYmYDYgJwhl2FDacGxoaNHjw4Nb1oEGD1NDQENehgFgK\nBoNmjwBEjRcE4Xh///232SMAUUsK94C0tDT99ttvrev6+nqlpaWd9bEulyt2kwExxL9N2E3Y65xP\nnDihjIwMrV+/XgMHDtTYsWO1atUqZWZmJmpGAOh2wu6czzvvPL3++usqKSlRKBTSPffcQzADQJzF\n7B2CAIDY4QVBALAgwhn4TygUMnsEoBXhDFuaN2+eFi9e3Lp+6qmntGTJEr344osaO3asPB6P5s+f\n3/r16dOnq6CgQKNHj9Y777zT+vk+ffro0Ucfldfr1ddff53QcwA6QjjDlmbPnq13331XkmQYht5/\n/30NHDhQu3btUk1NjbZs2aLa2lpt3LhRkrRs2TJt3rxZmzdv1uLFi9XU1CRJOnz4sAoLC7VlyxaN\nHz/etPMB/l/YqzUAKxo6dKj69eunrVu3qrGxUXl5eaqpqdG6deuUl5cnwzB0+PBh7dq1SxMnTtSr\nr76q1atXSzp5rf6uXbs0duxYJSUlacaMGSafDdAe4QzbmjNnjpYtW6bGxkbNnj1bX3zxhZ544gnd\ne++9bR5XVVWlDRs2aNOmTUpJSVFRUZGOHj0qSerZsydvUIElUWvAtm666SZVVFSotrZWU6ZM0ZQp\nU7R06VIdPnxYkrR3717t379fBw4cUGpqqlJSUrRjx4423TJXksKq2DnDtpKTk1VUVKTU1FS5XC4V\nFxdrx44dKiwslHTyxb4VK1Zo6tSpevPNN5WVlaWMjIzWr0u8rRvWxZtQYFuhUEj5+fn68MMPddll\nl5k9DhBT1BqwpR9//FHDhw9XcXExwQxHYucMABbEzhkALIhwBgALIpwBwIIIZwCwIMIZACyIcAYA\nC/ofZtgVI8j5ttsAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fee7d9d8e10>"
+       "<matplotlib.figure.Figure at 0x7f16deda9f98>"
       ]
      },
      "metadata": {},
@@ -370,6 +370,214 @@
     "\n",
     "1. Years fixed, for checking range of employment\n",
     "2. Need to combine and do analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/ipykernel/__main__.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "dete_resignations['institute_service'] = dete_resignations['dete_start_date'] - dete_resignations['year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dete_resignations.reset_index (inplace=True)\n",
+    "tafe_resignations.reset_index (inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                                         277\n",
+       "Contributing Factors. Dissatisfaction      55\n",
+       "Name: Contributing Factors. Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                      270\n",
+       "Job Dissatisfaction     62\n",
+       "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def update_vals(x):\n",
+    "    if pd.isnull(x) == True:\n",
+    "        return np.nan\n",
+    "    if x == '-':\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/pandas/core/frame.py:2540: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tafe_factors = ['Contributing Factors. Dissatisfaction','Contributing Factors. Job Dissatisfaction']\n",
+    "tafe_resignations [tafe_factors] = tafe_resignations [tafe_factors].applymap (update_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# tafe_resignations [factors] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dete_factors = ['job_dissatisfaction','dissatisfaction_with_the_department','physical_work_environment','lack_of_recognition','lack_of_job_security','work_location','employment_conditions','work_life_balance','workload']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/ipykernel/__main__.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "tafe_resignations['dissatisfied'] = tafe_resignations[tafe_factors].any(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/dataquest/system/env/python3/lib/python3.4/site-packages/ipykernel/__main__.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
+   "source": [
+    "dete_resignations['dissatisfied'] = dete_resignations[dete_factors].any(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dete_resignations_up = dete_resignations.copy()\n",
+    "tafe_resignations_up = tafe_resignations.copy()"
    ]
   },
   {
