--- a/DataQuest/Guided Project Employee Exits Survey/EmployeeExits.ipynb
+++ b/DataQuest/Guided Project Employee Exits Survey/EmployeeExits.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,7 @@
        "Name: separationtype, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +291,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +318,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -337,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f67832a5b38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff5996030b8>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -348,7 +348,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWcAAAEGCAYAAAC5EFRyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE/xJREFUeJzt3X9MVfUfx/HXNRjOaV7KUsMfZCkiCPeCmKirSwraL0v7\nZbXkYtbW5tbPtWpt5qqZ2S+ttlZNpWnW1h9qqyhTLptUIiValmnZtYFh1khTNMV7vn+YKF+Uey/c\ne88Pno9/5AOXc9/HyasPr3vuyWUYhiEAgKX0MHsAAEB7hDMAWBDhDAAWRDgDgAURzgBgQYQzAFhQ\nwsL5scceU2Zmpjwej26++WYdPHjwrI+rqKjQyJEjNWLECC1cuLD1801NTSopKVFGRoamTJmiAwcO\ntH5t27ZtGj9+vLKzs5Wbm6tjx451OMucOXPk8XiUm5urGTNmnHMWADBLXMK5qqpKZWVlbT5XUlKi\n7du3q66uTsOHD9eCBQvafV8oFNLcuXP12Wefafv27Vq1apV27NghSXr++ec1efJk/fTTT7r66qtb\nv//EiRO6++679dZbb+n7779XIBBQcnJyh/O9+uqrqqur09atW3XppZfqtddei9GZA0BsxG3n7HK5\n2qwnT56sHj1OPt24ceNUX1/f7ntqamo0fPhwDR06VMnJyZo5c6bWrFkjSVqzZo1KS0slSaWlpVq9\nerUk6fPPP1dubq6ys7MlSampqa3PvW7dOo0fP15jxozR7bffrubmZklS7969JUmGYejIkSO68MIL\nY336ANAlcQvnjt54uHTpUl1zzTXtPt/Q0KDBgwe3rgcNGqSGhgZJ0r59+9S/f39J0oABA/THH39I\nknbu3ClJmjp1qsaMGaNFixZJkv766y89++yzWr9+vWpra5Wfn6+XXnqp9dizZ8/WwIEDtW3bNt17\n771dPFsAiK2kWB5s3LhxOnbsmP755x81NTUpLy9PkrRw4UIVFxdLkp577jklJyfrzjvv7NJzndod\nt7S0qLq6WrW1terZs6cmTZqkMWPGqLm5WT/88IMmTJggwzB0/PhxFRYWtn7/0qVLZRiG5s6dq2ef\nfVbz5s3r0jwAEEsxDeevv/5a0snOuby8XEuXLm3z9eXLl+uTTz7Rhg0bzvr9aWlp+u2331rX9fX1\nSktLk3Ryt3xq99zY2KiLL75Y0snd9ZVXXqnU1FRJ0rXXXqtvv/1WGRkZKikp0cqVK885r8vl0syZ\nM/XCCy90/qQBIA4iqjUWLFigrKws5eTk6K677gp7NcTZVFRUaNGiRVq7dq1SUlLO+piCggL9/PPP\n2rNnj44dO6b3339f06ZNkyRNmzZNy5cvlySVl5frxhtvlCRNmTJF3333nY4ePaqWlhZVVVVp1KhR\nGjdunKqrq/XLL79Ikpqbm7Vr1y5Jav2cYRhau3atPB5P1OcDAHFlhBEMBo1LL73U+Pfffw3DMIzb\nbrvNKC8v7/B7AoGAUVZW1uZzl19+uTFkyBDD6/UaXq/XuP/++w3DMIy9e/ca1113XevjPv30U2PE\niBHG5ZdfbixYsKD183/99ZcxadIkY8SIEUZxcbHR1NTU+rWVK1caWVlZxujRo43HH3+89fOVlZVG\nQUGBkZOTY+Tm5hofffSREQqFjAkTJhg5OTlGTk6OUVZWZjQ3N4f7awCAhHIZRse3DG1qalJhYaG+\n+uor9enTR9OnT9cDDzygyZMnJ+q/HwDQ7YStNVJTU/XII49oyJAhSktLk9vtJpgBIM7ChvPu3bv1\nyiuvaM+ePdq7d68OHTqk9957LxGzAUC3FfZqjdraWk2YMEEXXHCBJGnGjBn68ssv210K9/9vOgEA\nhHeuZjlsOGdkZOiZZ57R0aNHlZKSovXr16ugoCCqJwHM5HI9LcN42uwxgHY62tSGrTVyc3M1a9Ys\n5efnKzc3V4Zh6L777ovpgEB8Bc0eAIha2Ks1Ij6Qy8XOGZbkcvllGMvNHgNop6Pc5H7OcLzSUr/Z\nIwBRY+cMACZh54xuLRAImD0CEDXCGQAsiFoDAExCrQEANkM4w/H8/oDZIwBRo9aA47lcARmGz+wx\ngHY6yk3CGY7nckn804QV0TkDgM0QzugGAmYPAESNcAYACyKc4Xjz5vnMHgGIGi8IAoBJeEEQ3Rr3\n1oAdEc4AYEHUGgBgEmoNALAZwhmOx701YEdhw3nnzp3yer3Ky8uT1+tV3759tWTJkkTMBsREebnZ\nEwDRi6pzDoVCGjRokDZt2qTBgwe3PRCdMyyKe2vAqmLWOX/xxRe67LLL2gUzACC2ogrnDz74QHfc\ncUe8ZgHiJGD2AEDUIq41jh8/rksuuUQ//PCDLrroovYHotaARXE/Z1hVR7mZFOlBPv30U+Xn5581\nmE/x+/1KT0+XJLndbnk8Hvl8Pkmn36XFmnWbdVHRybVO8v3357nWReoclyv676mMYJ4268pK8/8+\nWVt6ferjYDCocCLeOd9xxx2aOnWqSktLz34gds7ohES8WOeU54DzdPn/hNLc3KyhQ4dq9+7d6tOn\nT9RPApxLYoIz/rUG4YzO6HKt0atXL+3fvz+mQwGJco5f9gBL494aMJVTdpxOOQ8kFvfWAACbIZzh\neGe+Ug7YBeEMABZE5wxTOaWrdcp5ILHonNGtPf202RMA0WPnDFNxnTO6M3bOAGAz7JxhKqe8tZqd\nMzqDnTMA2AzhjG4gYPYAQNQIZzge99aAHdE5w1RO6Wqdch5ILDpnALAZwhmOx701YEeEMwBYEJ0z\nTOWUrtYp54HEonNGt8a9NWBH7JxhKu6tge6syzvnAwcO6NZbb1VmZqaysrK0adOmmA4IAGgrop2z\n3+/XVVddpbKyMrW0tKi5uVnnn39+2wOxc0YnOOW+F+yc0Rkd5WbYcD548KC8Xq9++eWXTj8JcC5O\nCU7CGZ3RpVrj119/Vb9+/VRWVqa8vDzdd999OnLkSMyHBOInYPYAQNSSwj2gpaVF3377rd544w2N\nGTNGDz74oJ5//nnNnz+/3WP9fr/S09MlSW63Wx6PRz6fT9LpNwKwZn3mWvLJ5ZJOB6jvvz9ju3a5\n4nt8KaBAwPy/T9bWXp/6OBgMKpywtca+fftUWFio3bt3S5I2btyohQsX6qOPPmp7IGoNdIJT6gCn\nnAcSq0u1Rv/+/TV48GDt3LlTkrR+/XqNGjUqthMCANqI6GqNrVu3as6cOTp+/LiGDRumZcuWqW/f\nvm0PxM4ZnZCIHWcgEGj99TJe2DmjMzrKzbCdsyTl5uZq8+bNMR0KAHBuvEMQpnLKjtMp54HE4t4a\nAGAzhDMc78zLmAC7IJwBwILonGEqp3S1TjkPJBadMwDYDOEMx6Nzhh0RzgBgQXTOMJVTulqnnAcS\ni84ZAGyGcIbj0TnDjghnALAgOmeYyildrVPOA4lF5wwANkM4w/HonGFHhDMAWBCdM0zllK7WKeeB\nxKJzBgCbIZzheHTOsKOI/h+C6enp6tu3r3r06KHk5GTV1NTEey4A6NYi6pyHDRumb775Rqmpqec+\nEJ0zOsEpXa1TzgOJ1eXO2TAMhUKhmA4FADi3iMLZ5XKpuLhYBQUFevvtt+M9ExBTdM6wo4g65+rq\nag0cOFD79+9XcXGxMjMzNXHixHaP8/v9Sk9PlyS53W55PB75fD5Jp39AWLM+c22oSHJJJ1eS778/\n7baulBQIVJr+98na2utTHweDQYUT9XXO8+fPV58+ffTwww+3PRCdMyyKPhhW1aXOubm5WYcOHZIk\nHT58WJ9//rmys7NjOyEAoI2wtca+ffs0ffp0uVwutbS06K677lJJSUkiZgNiJKDTBQRgD7x9G47n\ncgVkGD6zxwDa6Sg3CWc4Hp0zrIp7a6BbmzfP7AmA6BHOcDyfL2D2CEDUCGcAsCA6ZwAwCZ0zANgM\n4QzHO/Ots4BdEM5wvOXLzZ4AiB6dMxyP65xhVXTOAGAzhDO6gYDZAwBRI5wBwILonOF4dM6wKjpn\ndGvcWwN2RDjD8bi3BuyIcAYAC6JzBgCT0DkDgM0QznA87q0BO4o4nEOhkPLy8jRt2rR4zgPEHPfW\ngB1FHM6LFy/WqFGj4jkLEBfl5T6zRwCiFlE419fX65NPPtGcOXPiPQ8AQBGG80MPPaRFixbJ5XLF\nex4gDgJmDwBELSncAz7++GP1799fHo9HgUCgw8vl/H6/0tPTJUlut1sej0c+n0/S6RdlWLPuyrqo\nqEid0Zl9RWVlpenny9pZ61MfB4NBhRP2Oucnn3xSK1asUFJSko4cOaJ//vlHM2bM0Lvvvtv2QFzn\nDIvy+XxtfjgAq+goN6N6E0pVVZVeeuklrV27NqonAcxEOMOqeBMKurXs7GyzRwCixtu34XiBQKC1\n+wOsJGa1RmefBADQHrUGANgM4QzH48VA2BHhDAAWROcMACahcwYAmyGc4Xh0zrAjwhkALIjOGQBM\nQucMADZDOMPx6JxhR4QzAFgQnTMAmITOGQBshnCG49E5w44IZwCwIDpnADAJnTMA2AzhDMejc4Yd\nhQ3nf//9V1dccYW8Xq+ysrL05JNPJmIuAOjWwoZzSkqKKisrtWXLFm3btk0bNmxQdXV1ImYDYqKu\nrs7sEYCoRVRr9OrVS9LJXXQoFFJqampchwJiafXq1WaPAEQtonAOhULyer0aMGCAfD6fRo0aFe+5\ngJj5+++/zR4BiFpSJA/q0aOHtmzZooMHD6qkpERVVVW66qqr2j3O7/crPT1dkuR2u+XxeOTz+SSd\nflGGNetErOfOnauNGzfK7XZr69at8ng8kk7+G33wwQdNn49191yf+jgYDCqcqK9zfuaZZ9SrVy89\n8sgjbQ/Edc6wKJ/P1+aHA7CKLl3n/Oeff+rAgQOSpCNHjmjdunWtuxAAQHyErTV+//13lZaWyjAM\nhUIh3X333Zo0aVIiZgNiIjs72+wRgKjx9m04XiAQaO3+ACvpKDcJZwAwCffWAACbIZzheFypATsi\nnAHAguicAcAkdM4AYDOEMxyPzhl2RDgDgAXROQOASeicAcBmCGc4Hp0z7IhwBgALonMGAJPQOQOA\nzRDOcDw6Z9gR4QwAFkTnDAAmoXMGAJshnOF4dM6wo7DhXF9fr6uvvlpZWVkaPXq0lixZkoi5AKBb\nC9s5NzY2qrGxUR6PR4cOHVJ+fr7WrFmjkSNHtj0QnTMARKVLnfOAAQPk8XgkSb1791ZmZqYaGhpi\nOyEAoI2oOudgMKi6ujpdccUV8ZoHiDk6Z9hRUqQPPHTokG655RYtXrxYvXv3Putj/H6/0tPTJUlu\nt1sej0c+n0/S6R8Q1qxZs+6u61MfB4NBhRPRdc4tLS26/vrrdc011+iBBx44+4HonAEgKh3lZkTh\nPGvWLPXr108vv/xyp54EANBel14QrK6u1sqVK7VhwwZ5vV7l5eWpoqIi5kMC8XLmr5SAXYTtnCdM\nmKATJ04kYhYAwH+4twYAmIR7awCAzRDOcDw6Z9gR4QwAFkTnDAAmoXMGAJshnOF4dM6wI8IZACyI\nzhkATELnDAA2QzjD8eicYUeEMwBYEJ0zAJiEzhkAbIZwhuPROcOOCGcAsCA6ZwAwCZ0zANgM4QzH\no3OGHYUN53vuuUf9+/dXTk5OIuYBACiCznnjxo3q3bu3Zs2apW3btp37QHTOABCVLnXOEydOVGpq\nasyHAgCcG50zHI/OGXaUFMuD+f1+paenS5Lcbrc8Ho98Pp+k0z8grFmzZt1d16c+DgaDCiei65z3\n7NmjG264gc4ZAGKoy9c5G4ZB8AJAAoUN5zvvvFPjx4/Xzp07NWTIEC1btiwRcwExc+avlIBdhO2c\n33vvvUTMAQA4A/fWAACTcG8NALAZwhmOR+cMOyKcAcCC6JwBwCR0zgBgM4QzHI/OGXZEOAOABdE5\nA4BJ6JwBwGYIZzgenTPsiHAGAAuicwYAk9A5A4DNEM5wPDpn2BHhDAAWROcMACahcwYAm4konCsq\nKjRy5EiNGDFCCxcujPdMQEzROcOOwoZzKBTS3Llz9dlnn2n79u1atWqVduzYkYjZgJioq6szewQg\namHDuaamRsOHD9fQoUOVnJysmTNnas2aNYmYDYgJwhl2FDacGxoaNHjw4Nb1oEGD1NDQENehgFgK\nBoNmjwBEjRcE4Xh///232SMAUUsK94C0tDT99ttvrev6+nqlpaWd9bEulyt2kwExxL9N2E3Y65xP\nnDihjIwMrV+/XgMHDtTYsWO1atUqZWZmJmpGAOh2wu6czzvvPL3++usqKSlRKBTSPffcQzADQJzF\n7B2CAIDY4QVBALAgwhn4TygUMnsEoBXhDFuaN2+eFi9e3Lp+6qmntGTJEr344osaO3asPB6P5s+f\n3/r16dOnq6CgQKNHj9Y777zT+vk+ffro0Ucfldfr1ddff53QcwA6QjjDlmbPnq13331XkmQYht5/\n/30NHDhQu3btUk1NjbZs2aLa2lpt3LhRkrRs2TJt3rxZmzdv1uLFi9XU1CRJOnz4sAoLC7VlyxaN\nHz/etPMB/l/YqzUAKxo6dKj69eunrVu3qrGxUXl5eaqpqdG6deuUl5cnwzB0+PBh7dq1SxMnTtSr\nr76q1atXSzp5rf6uXbs0duxYJSUlacaMGSafDdAe4QzbmjNnjpYtW6bGxkbNnj1bX3zxhZ544gnd\ne++9bR5XVVWlDRs2aNOmTUpJSVFRUZGOHj0qSerZsydvUIElUWvAtm666SZVVFSotrZWU6ZM0ZQp\nU7R06VIdPnxYkrR3717t379fBw4cUGpqqlJSUrRjx4423TJXksKq2DnDtpKTk1VUVKTU1FS5XC4V\nFxdrx44dKiwslHTyxb4VK1Zo6tSpevPNN5WVlaWMjIzWr0u8rRvWxZtQYFuhUEj5+fn68MMPddll\nl5k9DhBT1BqwpR9//FHDhw9XcXExwQxHYucMABbEzhkALIhwBgALIpwBwIIIZwCwIMIZACyIcAYA\nC/ofZtgVI8j5ttsAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6733e5a4a8>"
+       "<matplotlib.figure.Figure at 0x7ff59cde34a8>"
       ]
      },
      "metadata": {},
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +423,7 @@
        "Name: Contributing Factors. Dissatisfaction, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +447,7 @@
        "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +617,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +653,7 @@
        "       'institute'], dtype=object)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -963,7 +963,7 @@
        "[651 rows x 12 columns]>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1035,7 +1035,7 @@
        "True"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1163,13 +1163,25 @@
        "Name: service_cat, Length: 651, dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "combined_updated['service_cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "combined_final = combined.copy()\n",
+    "combined_final.to_csv('combined_final.csv',index=False,header=True)"
    ]
   },
   {
